In projects, do not show topbar in md screens, and avoid horizontal scrolls

--- a/src/sass/navbar-top.sass
+++ b/src/sass/navbar-top.sass
@@ -9,7 +9,7 @@
   .has-navbar-top .app-body
     padding-top: 100px
 
-@media (max-width: $screen-sm-min)
+@media (max-width: $screen-sm-max)
   .has-navbar-top
     .app-body
       padding-top: 70px
